--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Página inicial
-      - href: about.qmd
+      - href: sobre.qmd
         text: Sobre o curso
 
 format:
