Adicionar URL do site no _quarto.yml. Adicionar página de erro 404 para orientar melhor os usuários do site.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
 
 website:
   title: "Introdução ao R"
+  site-url: "https://brunomontezano.github.io/r-workshop/"
   navbar:
     left:
       - href: index.qmd
