Adicionar tarefas de casa e gabaritos, além de referenciar adição na home do website.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
         text: Materiais recomendados
       - href: aulas_e_laboratorios.qmd
         text: Aulas e laboratórios
+      - href: tarefas_de_casa.qmd
+        text: Tarefas de casa
       - href: perguntas_frequentes.qmd
         text: Perguntas frequentes
   page-footer: 
