Update website theme and add hyperlink and ORCID to author entry.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,8 @@ website:
 
 format:
   html:
-    theme: simplex
+    theme: litera
+    highlight-style: nord
     css: styles.css
     toc: false
 
